fix #406 - Tronscan V2 - Markets - Tron Style - table information not readable

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -664,6 +664,10 @@ th {
   box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
 }
 
+.ant-table-pagination.ant-pagination{
+  margin-right: 10px;
+}
+
 .custom-filter-dropdown input {
   width: 130px;
   margin-right: 8px;
