--- a/src/styles/themes/tron.scss
+++ b/src/styles/themes/tron.scss
@@ -91,6 +91,15 @@ $tronBlue: rgba(21,171,195,1.0);
     background: #000 !important;
   }
 
+  .ant-table{
+    color: #15abc3;
+    font-family: "Bitstream Vera Sans Mono", monospace;
+    text-shadow: 0 0 5px rgba(21, 171, 195, 0.7);
+  }
+
+  .ant-table-thead>tr>th {
+    background-color: #15abc3;
+  }
 
   .page-link {
     background: black;
